FreeIPMI 1.6.1 - 03/01/14
-------------------------
o Legacy -f short option for --flush-cache and -Q short option for
  quiet-cache.  Backwards compatible for tools that supported it
  before.

FreeIPMI 1.5.1 - 03/01/14
-------------------------
o Update Intel Node Manager support for 3.0 specification.
  - Update API and fiid templates in libfreeipmi.
  - Support new OEM SEL events
  - Update ipmi-oem commands.
    - Support new get/set-turbo-synchronization-ratio
    - Support new 'policypowerdomain' option in
      get-node-manager-capabilities and set-node-manager-policy.
    - Update output of get-node-manager-policy and
      get-node-manager-capabilities for changes.
    - get/set-node-manager-alert-thresholds converted to
      get/set-node-manager-policy-alert-thresholds.  Legacy commands
      still supported.
o Update libfreeipmi for IPMI 2.0 Errata 7.
  - Support/handle FRU Multirecord NVM Express type.
o Support Get Device SDR Info, Get Device SDR, and Reserve Device SDR
  Repository commands in libfreeipmi.
o Support ipmi-sel OEM interpretation of Linux kernel panics.
o Re-organize OEM header files into per-vendor files.
o In ipmi-oem, fix error in "DNS Register BMC" output in
  "get-dns-config" output in Inventec, Quanta, and Wistron vendor
  sections.
o Support systemd through --with-systemdsystemunitdir configure option. 
o Minor corner case bug fixes.

FreeIPMI 1.4.11 - 10/29/15
--------------------------
o Fix logic error with a few OEM SEL events for Intel E5 2600 V3 motherboard.
o Fix various logic errors in ipmi-oem Intel Node Manager extensions.
o Documentation updates.

FreeIPMI 1.4.10 - 10/20/15
--------------------------
o In ipmi-oem, support Supermicro get-power-supply-status2.
o In ipmi-locate, fix probing issue on arm32 & 64.
o Handle several additional completion code error message in libfreeipmi.
o Handle several error handling corner cases in ipmi-sensors.
o Support Intel E5 2600 V3 motherboard OEM SEL events.