@@ -1,5 +1,6 @@
 FreeIPMI 1.6.1 - 03/01/14
 -------------------------
+o Add SDR cache options to ipmi-config.
 o Legacy -f short option for --flush-cache and -Q short option for
   quiet-cache.  Backwards compatible for tools that supported it
   before.
